# til

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  package.json
.claude/agents/: desktop-agent.md  mobile-agent.md  nlp-agent.md  scheduler-agent.md  supabase-agent.md  sync-agent.md
.claude/docs/: design.md  prd.md
.claude/plans/: 00-overview.md  01-monorepo-scaffold.md  02-til-core-nlp.md  03-supabase-schema.md  04-desktop-tasks.md  05-desktop-calendar.md  06-auth-google-oauth.md  07-sync-layer.md  08-command-palette.md  09-mobile-app.md  10-smart-scheduler.md
.omc/: project-memory.json
.omc/sessions/: 1755e1da-899f-4cb3-9e21-599a46df043f.json  2e445a4f-99cd-4b9d-bc48-b9abb495b94d.json  648ddb1b-3da8-471f-80fc-5ebba416202d.json  e95eeab6-6a55-48be-a811-d430ca58bc36.json
.pi/: taskplane.json
apps/desktop/: .env.example  Cargo.toml  index.html  package.json
apps/desktop/src/: App.tsx  index.css  main.rs  theme.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: auth.rs  commands.rs  main.rs  state.rs
apps/desktop/src/components/: AuthScreen.tsx  CalendarSidebar.tsx  CommandPalette.tsx  DatePickerPopover.tsx  DeadlinePopover.tsx  EventBlock.tsx  TagPopover.tsx  TaskBlock.tsx  TaskInput.tsx  TaskRow.tsx
apps/desktop/src/hooks/: useAuth.ts
apps/desktop/src/lib/: dateUtils.ts  db.ts  invoke.ts  supabase.ts
apps/desktop/src/state/: store.rs
apps/desktop/src/views/: Calendar.tsx  Tasks.tsx  mod.rs  root.rs
apps/desktop/src/views/calendar/: Month.tsx  Week.tsx  mod.rs
apps/desktop/src/views/command_palette/: mod.rs
apps/desktop/src/views/tasks/: UpcomingView.tsx  mod.rs
apps/mobile/: app.json  (+2 more)
supabase/: config.toml  run_migrations.sql  seed.sql
(+57 files in other folders)
